# Copyright (C) 2021-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
SUBSYSTEM_DIR = "../.."
import("$SUBSYSTEM_DIR/core_service/telephony_core_service.gni")
import("$SUBSYSTEM_DIR/core_service/test/core_service_test.gni")

group("telephony_mock_deps") {
  testonly = true
  deps = []
  if (use_clang_coverage) {
    deps += [
      "./mock/ffrt:ffrt_mocked",
      ":core_service_test_base"
    ]
  }
}

config("core_service_test_config") {
  include_dirs = core_service_incluedirs
}

ohos_static_library("core_service_test_base") {
  cflags = [
    "-O0",
    "-w",
    "-fno-omit-frame-pointer",
    "-fno-optimize-sibling-calls",
    "-fno-exceptions",
    "-fno-access-control",
  ]
  cflags_cc= cflags
  testonly = true
  sources = core_service_base_src
  branch_protector_ret = "pac_ret"
  public_configs = [ ":core_service_test_config" ]
  external_deps = core_service_external_deps
  defines = core_service_defines
  deps = [ "mock/ffrt:ffrt_mocked" ]
  part_name = "core_service"
  subsystem_name = "telephony"
}

group("unittest") {
  testonly = true
  deps = []
  deps += [
    "unittest/core_service_gtest:tel_core_service_common_test",
    "unittest/core_service_gtest:tel_core_service_gtest",
    "unittest/core_service_gtest:tel_core_service_native_branch_gtest",
    "unittest/core_service_gtest:tel_core_service_test",
    "unittest/core_service_gtest:tel_core_zero_branch_gtest",
    "unittest/core_service_gtest:tel_network_search_branch_gtest",
    "unittest/core_service_gtest:tel_network_search_gtest",
    "unittest/core_service_gtest:tel_network_search_manager_gtest",
    "unittest/core_service_gtest:tel_network_search_zero_branch_gtest",
    "unittest/core_service_gtest:tel_sim_gtest",
    "unittest/core_service_gtest:tel_sim_zero_branch_gtest",
    "unittest/core_service_gtest:tel_satellite_service_gtest",
    "unittest/core_service_gtest:tel_sim_core_service_gtest",
    "unittest/core_service_gtest:tel_sim_elementary_file_gtest",
    "unittest/core_service_gtest:tel_sim_icc_gtest",
    "unittest/core_service_gtest:tel_sim_type_convert_gtest",
    "unittest/core_service_gtest:tel_vcard_gtest",
    "unittest/core_service_gtest:tel_vsim_gtest",
    "unittest/icc_dialling_numbers_handler_gtest:icc_dialling_numbers_handler_gtest",
    "unittest/icc_file_gtest:icc_file_gtest",
    "unittest/raw_parcel_core_service_gtest:raw_parcel_core_service_test",
    "unittest/core_service_common_event_gtest:core_service_common_event_test",
    "unittest/sim_gtest:sim_gtest",
    "unittest/sim_state_handle_gtest:sim_state_handle_gtest",
    "unittest/tel_ril_gtest:tel_ril_unittest",
    "unittest/utils_vcard_gtest:utils_vcard_branch_gtest",
    "unittest/utils_vcard_gtest:utils_vcard_gtest",
    "unittest/utils_vcard_gtest:utils_vcard_constructor_gtest",
  ]

  if (core_service_support_esim) {
    deps += [
      "unittest/esim_gtest:core_manager_inner_test",
      "unittest/esim_gtest:esim_core_service_client_branch_test",
      "unittest/esim_gtest:esim_service_client_branch_gtest",
      "unittest/esim_gtest:esim_file_branch_test",
      "unittest/esim_gtest:tel_esim_gtest",
      "unittest/esim_parcel_gtest:parcel_gtest",
      "unittest/utils_codec_gtest:utils_codec_gtest",
    ]
  }
}

ohos_static_library("tel_core_service_static") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  sources = [
    "$TELEPHONY_EXT_WRAPPER_ROOT/src/telephony_ext_wrapper.cpp",
    "$TELEPHONY_IMS_CORE_SERVICE_SRC_PATH/ims_core_service_callback_stub.cpp",
    "$TELEPHONY_IMS_CORE_SERVICE_SRC_PATH/ims_core_service_client.cpp",
    "$TELEPHONY_IMS_CORE_SERVICE_SRC_PATH/ims_core_service_proxy.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/cell_info.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/device_state_handler.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/device_state_observer.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/ims_reg_info_callback_proxy.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_register.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_search_callback_proxy.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_search_handler.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_search_manager.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_search_notify.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_search_state.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_selection.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_type.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_utils.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/nitz_update.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/nr_ssb_info.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/operator_name.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/operator_name_utils.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/radio_info.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/setting_utils.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/signal_info.cpp",
    "$TELEPHONY_SATELLITE_CORE_SERVICE_SRC_PATH/satellite_core_callback.cpp",
    "$TELEPHONY_SATELLITE_CORE_SERVICE_SRC_PATH/satellite_core_callback_stub.cpp",
    "$TELEPHONY_SATELLITE_CORE_SERVICE_SRC_PATH/satellite_service_client.cpp",
    "$TELEPHONY_SATELLITE_CORE_SERVICE_SRC_PATH/satellite_service_proxy.cpp",
    "$TELEPHONY_SIM_ROOT/src/csim_file_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/esim_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_dialling_numbers_cache.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_dialling_numbers_handler.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_dialling_numbers_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_file.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_file_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_operator_privilege_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_operator_rule.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_state.cpp",
    "$TELEPHONY_SIM_ROOT/src/isim_file.cpp",
    "$TELEPHONY_SIM_ROOT/src/isim_file_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/mcc_pool.cpp",
    "$TELEPHONY_SIM_ROOT/src/multi_sim_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/multi_sim_monitor.cpp",
    "$TELEPHONY_SIM_ROOT/src/operator_config_cache.cpp",
    "$TELEPHONY_SIM_ROOT/src/operator_config_loader.cpp",
    "$TELEPHONY_SIM_ROOT/src/operator_file_parser.cpp",
    "$TELEPHONY_SIM_ROOT/src/operator_matching_rule.cpp",
    "$TELEPHONY_SIM_ROOT/src/pdp_profile_rdb_helper.cpp",
    "$TELEPHONY_SIM_ROOT/src/plmn_file.cpp",
    "$TELEPHONY_SIM_ROOT/src/radio_protocol_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/ruim_file.cpp",
    "$TELEPHONY_SIM_ROOT/src/ruim_file_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_account_callback_death_recipient.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_account_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_char_decode.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_file.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_file_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_file_init.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_file_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_file_parse.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_number_decode.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_rdb_helper.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_sms_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_sms_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_state_handle.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_state_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_state_tracker.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_utils.cpp",
    "$TELEPHONY_SIM_ROOT/src/stk_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/stk_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/tag_service.cpp",
    "$TELEPHONY_SIM_ROOT/src/telephony_data_helper.cpp",
    "$TELEPHONY_SIM_ROOT/src/usim_dialling_numbers_service.cpp",
    "$TELEPHONY_SIM_ROOT/src/usim_file_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/voice_mail_constants.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/observer_handler.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_base.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_call.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_callback.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_data.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_handler.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_manager.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_modem.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_network.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_sim.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_sms.cpp",
    "$CORE_SERVICE_ROOT/services/core/src/core_service.cpp",
    "$CORE_SERVICE_ROOT/services/core/src/core_service_dump_helper.cpp",
    "$CORE_SERVICE_ROOT/services/core/src/core_service_hisysevent.cpp",
    "$CORE_SERVICE_ROOT/services/core/src/core_service_stub.cpp",
    "$CORE_SERVICE_ROOT/services/core/src/raw_parcel_callback_proxy.cpp",
    "$CORE_SERVICE_ROOT/services/core/src/core_service_common_event_hub.cpp",
  ]
  if (core_service_support_esim) {
    sources += [
      "$TELEPHONY_SIM_ROOT/src/esim_controller.cpp",
      "$TELEPHONY_SIM_ROOT/src/esim_file.cpp",
      "$TELEPHONY_SIM_ROOT/src/start_osu_result_callback.cpp",
    ]
  }

  include_dirs = [
    "$TELEPHONY_SIM_ROOT/include",
    "$TELEPHONY_TEL_RIL_ROOT/include",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/include",
    "$TELEPHONY_EXT_WRAPPER_ROOT/include",
    "$CORE_SERVICE_ROOT/services/core/include",
    "$CORE_SERVICE_ROOT/services/satellite_service_interaction/include",
    "$CORE_SERVICE_ROOT/utils/log/include",
  ]

  if (core_service_support_esim) {
    include_dirs += [
      "$CORE_SERVICE_ROOT/utils/codec/include",
      "$CORE_SERVICE_ROOT/utils/vcard/include",
    ]
  }

  configs = [ "$CORE_SERVICE_ROOT/utils:telephony_log_config" ]

  defines = [
    "LOG_TAG = \"CoreService\"",
    "LOG_DOMAIN = 0xD001F04",
    "OPENSSL_SUPPRESS_DEPRECATED",
  ]

  defines += telephony_extra_defines

  deps = [
    "$CORE_SERVICE_ROOT/interfaces/innerkits:tel_core_service_api",
    "$CORE_SERVICE_ROOT/utils:libtel_common",
  ]

  if (core_service_support_esim) {
    deps += [ "$CORE_SERVICE_ROOT/utils:libtel_vcard" ]
  }

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_deps_wrapper",
    "ability_runtime:ability_manager",
    "ability_runtime:app_manager",
    "ability_runtime:data_ability_helper",
    "ability_runtime:dataobs_manager",
    "ability_runtime:wantagent_innerkits",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "cJSON:cjson",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "config_policy:configpolicy_util",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "drivers_interface_ril:libril_proxy_1.1",
    "drivers_interface_ril:libril_proxy_1.2",
    "drivers_interface_ril:libril_proxy_1.3",
    "drivers_interface_ril:libril_proxy_1.4",
    "drivers_interface_ril:libril_proxy_1.5",
    "eventhandler:libeventhandler",
    "ffrt:libffrt",
    "hdf_core:libhdi",
    "hdf_core:libpub_utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "huks:libhukssdk",
    "i18n:intl_util",
    "i18n:zone_util",
    "init:libbegetutil",
    "ipc:ipc_single",
    "libphonenumber:phonenumber_standard",
    "libpng:libpng",
    "libxml2:libxml2",
    "netmanager_base:net_conn_manager_if",
    "openssl:libcrypto_shared",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "telephony_data:tel_telephony_data",
    "time_service:time_client",
  ]

  if (defined(global_parts_info) &&
      defined(global_parts_info.communication_netmanager_ext) &&
      global_parts_info.communication_netmanager_ext) {
    external_deps += [ "netmanager_ext:net_tether_manager_if" ]
    defines += [ "ABILITY_NETMANAGER_EXT_SUPPORT" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.powermgr_power_manager) &&
      global_parts_info.powermgr_power_manager) {
    external_deps += [ "power_manager:powermgr_client" ]
    defines += [ "ABILITY_POWER_SUPPORT" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.powermgr_battery_manager) &&
      global_parts_info.powermgr_battery_manager) {
    external_deps += [ "battery_manager:batterysrv_client" ]
    defines += [ "ABILITY_BATTERY_SUPPORT" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.location_location) &&
      global_parts_info.location_location) {
    external_deps += [
      "location:lbsservice_common",
      "location:locator_sdk",
    ]
    defines += [ "ABILITY_LOCATION_SUPPORT" ]
  }

  if (telephony_hicollie_able) {
    external_deps += [ "hicollie:libhicollie" ]
    defines += [ "HICOLLIE_ENABLE" ]
  }

  part_name = "core_service"
  subsystem_name = "telephony"
}

group("test") {
  testonly = true
  deps = [
    ":unittest",
    "fuzztest:fuzztest"
  ]
}
