# Copyright (C) 2025-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("../telephony_core_service.gni")

CORE_SERVICE_ROOT = ".."
TELEPHONY_NETWORK_SEARCH_ROOT = "$CORE_SERVICE_ROOT/services/network_search"
TELEPHONY_SIM_ROOT = "$CORE_SERVICE_ROOT/services/sim"
TELEPHONY_TEL_RIL_ROOT = "$CORE_SERVICE_ROOT/services/tel_ril"
TELEPHONY_IMS_CORE_SERVICE_SRC_PATH = "$CORE_SERVICE_ROOT/services/ims_service_interaction/src"
if (core_service_feature_support_satellite) {
  TELEPHONY_SATELLITE_CORE_SERVICE_SRC_PATH = "$CORE_SERVICE_ROOT/services/satellite_service_interaction/src"
}
TELEPHONY_EXT_WRAPPER_ROOT = "$CORE_SERVICE_ROOT/services/telephony_ext_wrapper"
TELEPHONY_UTILS = "$CORE_SERVICE_ROOT/utils"
common_src = [
  "$TELEPHONY_UTILS/../frameworks/js/napi/napi_util.cpp",
  "$TELEPHONY_UTILS/common/src/base64.cpp",
  "$TELEPHONY_UTILS/common/src/enum_convert.cpp",
  "$TELEPHONY_UTILS/common/src/str_convert.cpp",
  "$TELEPHONY_UTILS/common/src/tel_aes_crypto_util.cpp",
  "$TELEPHONY_UTILS/common/src/tel_event_handler.cpp",
  "$TELEPHONY_UTILS/common/src/tel_event_queue.cpp",
  "$TELEPHONY_UTILS/common/src/telephony_common_utils.cpp",
  "$TELEPHONY_UTILS/common/src/telephony_config.cpp",
  "$TELEPHONY_UTILS/common/src/telephony_ext_utils_wrapper.cpp",
  "$TELEPHONY_UTILS/common/src/telephony_permission.cpp",
  "$TELEPHONY_UTILS/preferences/src/tel_profile_util.cpp",
]

vcard_src = [
  "$TELEPHONY_UTILS/vcard/src/contact_data/vcard_anniversary_data.cpp",
  "$TELEPHONY_UTILS/vcard/src/contact_data/vcard_birthday_data.cpp",
  "$TELEPHONY_UTILS/vcard/src/contact_data/vcard_email_data.cpp",
  "$TELEPHONY_UTILS/vcard/src/contact_data/vcard_event_data.cpp",
  "$TELEPHONY_UTILS/vcard/src/contact_data/vcard_group_data.cpp",
  "$TELEPHONY_UTILS/vcard/src/contact_data/vcard_im_data.cpp",
  "$TELEPHONY_UTILS/vcard/src/contact_data/vcard_name_data.cpp",
  "$TELEPHONY_UTILS/vcard/src/contact_data/vcard_nickname_data.cpp",
  "$TELEPHONY_UTILS/vcard/src/contact_data/vcard_note_data.cpp",
  "$TELEPHONY_UTILS/vcard/src/contact_data/vcard_organization_data.cpp",
  "$TELEPHONY_UTILS/vcard/src/contact_data/vcard_phone_data.cpp",
  "$TELEPHONY_UTILS/vcard/src/contact_data/vcard_photo_data.cpp",
  "$TELEPHONY_UTILS/vcard/src/contact_data/vcard_postal_data.cpp",
  "$TELEPHONY_UTILS/vcard/src/contact_data/vcard_relation_data.cpp",
  "$TELEPHONY_UTILS/vcard/src/contact_data/vcard_sip_data.cpp",
  "$TELEPHONY_UTILS/vcard/src/contact_data/vcard_uid_data.cpp",
  "$TELEPHONY_UTILS/vcard/src/contact_data/vcard_website_data.cpp",
  "$TELEPHONY_UTILS/vcard/src/vcard_configuration.cpp",
  "$TELEPHONY_UTILS/vcard/src/vcard_constructor.cpp",
  "$TELEPHONY_UTILS/vcard/src/vcard_contact.cpp",
  "$TELEPHONY_UTILS/vcard/src/vcard_decoder.cpp",
  "$TELEPHONY_UTILS/vcard/src/vcard_decoder_v21.cpp",
  "$TELEPHONY_UTILS/vcard/src/vcard_decoder_v30.cpp",
  "$TELEPHONY_UTILS/vcard/src/vcard_decoder_v40.cpp",
  "$TELEPHONY_UTILS/vcard/src/vcard_encoder.cpp",
  "$TELEPHONY_UTILS/vcard/src/vcard_file_utils.cpp",
  "$TELEPHONY_UTILS/vcard/src/vcard_manager.cpp",
  "$TELEPHONY_UTILS/vcard/src/vcard_raw_data.cpp",
  "$TELEPHONY_UTILS/vcard/src/vcard_rdb_helper.cpp",
  "$TELEPHONY_UTILS/vcard/src/vcard_utils.cpp",
]

tel_core_service_src = [
  "$TELEPHONY_IMS_CORE_SERVICE_SRC_PATH/ims_core_service_callback_stub.cpp",
  "$TELEPHONY_IMS_CORE_SERVICE_SRC_PATH/ims_core_service_client.cpp",
  "$TELEPHONY_IMS_CORE_SERVICE_SRC_PATH/ims_core_service_proxy.cpp",
  "$TELEPHONY_NETWORK_SEARCH_ROOT/src/cell_info.cpp",
  "$TELEPHONY_NETWORK_SEARCH_ROOT/src/device_state_handler.cpp",
  "$TELEPHONY_NETWORK_SEARCH_ROOT/src/device_state_observer.cpp",
  "$TELEPHONY_NETWORK_SEARCH_ROOT/src/ims_reg_info_callback_proxy.cpp",
  "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_register.cpp",
  "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_search_callback_proxy.cpp",
  "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_search_handler.cpp",
  "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_search_manager.cpp",
  "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_search_notify.cpp",
  "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_search_state.cpp",
  "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_selection.cpp",
  "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_type.cpp",
  "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_utils.cpp",
  "$TELEPHONY_NETWORK_SEARCH_ROOT/src/nitz_update.cpp",
  "$TELEPHONY_NETWORK_SEARCH_ROOT/src/nr_ssb_info.cpp",
  "$TELEPHONY_NETWORK_SEARCH_ROOT/src/operator_name.cpp",
  "$TELEPHONY_NETWORK_SEARCH_ROOT/src/operator_name_utils.cpp",
  "$TELEPHONY_NETWORK_SEARCH_ROOT/src/radio_info.cpp",
  "$TELEPHONY_NETWORK_SEARCH_ROOT/src/setting_utils.cpp",
  "$TELEPHONY_NETWORK_SEARCH_ROOT/src/signal_info.cpp",
  "$TELEPHONY_SIM_ROOT/src/csim_file_controller.cpp",
  "$TELEPHONY_SIM_ROOT/src/esim_manager.cpp",
  "$TELEPHONY_SIM_ROOT/src/icc_dialling_numbers_cache.cpp",
  "$TELEPHONY_SIM_ROOT/src/icc_dialling_numbers_handler.cpp",
  "$TELEPHONY_SIM_ROOT/src/icc_dialling_numbers_manager.cpp",
  "$TELEPHONY_SIM_ROOT/src/icc_file.cpp",
  "$TELEPHONY_SIM_ROOT/src/icc_file_controller.cpp",
  "$TELEPHONY_SIM_ROOT/src/icc_operator_privilege_controller.cpp",
  "$TELEPHONY_SIM_ROOT/src/icc_operator_rule.cpp",
  "$TELEPHONY_SIM_ROOT/src/icc_state.cpp",
  "$TELEPHONY_SIM_ROOT/src/isim_file.cpp",
  "$TELEPHONY_SIM_ROOT/src/isim_file_controller.cpp",
  "$TELEPHONY_SIM_ROOT/src/mcc_pool.cpp",
  "$TELEPHONY_SIM_ROOT/src/multi_sim_controller.cpp",
  "$TELEPHONY_SIM_ROOT/src/multi_sim_monitor.cpp",
  "$TELEPHONY_SIM_ROOT/src/operator_config_cache.cpp",
  "$TELEPHONY_SIM_ROOT/src/operator_config_loader.cpp",
  "$TELEPHONY_SIM_ROOT/src/operator_config_hisysevent.cpp",
  "$TELEPHONY_SIM_ROOT/src/operator_file_parser.cpp",
  "$TELEPHONY_SIM_ROOT/src/operator_matching_rule.cpp",
  "$TELEPHONY_SIM_ROOT/src/pdp_profile_rdb_helper.cpp",
  "$TELEPHONY_SIM_ROOT/src/plmn_file.cpp",
  "$TELEPHONY_SIM_ROOT/src/radio_protocol_controller.cpp",
  "$TELEPHONY_SIM_ROOT/src/ruim_file.cpp",
  "$TELEPHONY_SIM_ROOT/src/ruim_file_controller.cpp",
  "$TELEPHONY_SIM_ROOT/src/sim_account_callback_death_recipient.cpp",
  "$TELEPHONY_SIM_ROOT/src/sim_account_manager.cpp",
  "$TELEPHONY_SIM_ROOT/src/sim_char_decode.cpp",
  "$TELEPHONY_SIM_ROOT/src/sim_file.cpp",
  "$TELEPHONY_SIM_ROOT/src/sim_file_init.cpp",
  "$TELEPHONY_SIM_ROOT/src/sim_file_controller.cpp",
  "$TELEPHONY_SIM_ROOT/src/sim_file_manager.cpp",
  "$TELEPHONY_SIM_ROOT/src/sim_file_parse.cpp",
  "$TELEPHONY_SIM_ROOT/src/sim_manager.cpp",
  "$TELEPHONY_SIM_ROOT/src/sim_number_decode.cpp",
  "$TELEPHONY_SIM_ROOT/src/sim_rdb_helper.cpp",
  "$TELEPHONY_SIM_ROOT/src/sim_sms_controller.cpp",
  "$TELEPHONY_SIM_ROOT/src/sim_sms_manager.cpp",
  "$TELEPHONY_SIM_ROOT/src/sim_state_handle.cpp",
  "$TELEPHONY_SIM_ROOT/src/sim_state_manager.cpp",
  "$TELEPHONY_SIM_ROOT/src/sim_state_tracker.cpp",
  "$TELEPHONY_SIM_ROOT/src/sim_utils.cpp",
  "$TELEPHONY_SIM_ROOT/src/stk_controller.cpp",
  "$TELEPHONY_SIM_ROOT/src/stk_manager.cpp",
  "$TELEPHONY_SIM_ROOT/src/tag_service.cpp",
  "$TELEPHONY_SIM_ROOT/src/telephony_data_helper.cpp",
  "$TELEPHONY_SIM_ROOT/src/usim_dialling_numbers_service.cpp",
  "$TELEPHONY_SIM_ROOT/src/usim_file_controller.cpp",
  "$TELEPHONY_SIM_ROOT/src/voice_mail_constants.cpp",
  "$TELEPHONY_TEL_RIL_ROOT/src/observer_handler.cpp",
  "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_base.cpp",
  "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_call.cpp",
  "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_callback.cpp",
  "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_data.cpp",
  "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_handler.cpp",
  "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_manager.cpp",
  "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_modem.cpp",
  "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_network.cpp",
  "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_sim.cpp",
  "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_sms.cpp",
  "$CORE_SERVICE_ROOT/services/core/src/core_service.cpp",
  "$CORE_SERVICE_ROOT/services/core/src/core_service_dump_helper.cpp",
  "$CORE_SERVICE_ROOT/services/core/src/core_service_hisysevent.cpp",
  "$CORE_SERVICE_ROOT/services/core/src/core_service_stub.cpp",
  "$CORE_SERVICE_ROOT/services/core/src/raw_parcel_callback_proxy.cpp",
  "$CORE_SERVICE_ROOT/services/core/src/core_service_common_event_hub.cpp",
]
if (core_service_support_esim) {
  tel_core_service_src += [
    "$TELEPHONY_SIM_ROOT/src/esim_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/esim_file.cpp",
    "$TELEPHONY_SIM_ROOT/src/start_osu_result_callback.cpp",
    "$CORE_SERVICE_ROOT/test/mock/codec/src/asn1_builder.cpp",
    "$CORE_SERVICE_ROOT/test/mock/codec/src/asn1_decoder.cpp",
    "$CORE_SERVICE_ROOT/test/mock/codec/src/asn1_node.cpp",
    "$CORE_SERVICE_ROOT/test/mock/codec/src/asn1_utils.cpp",
    "$CORE_SERVICE_ROOT/test/mock/codec/src/request_apdu_build.cpp",
    "$CORE_SERVICE_ROOT/test/mock/codec/src/reset_response.cpp",
  ]
}
if (core_service_feature_support_satellite) {
  tel_core_service_src += [
    "$TELEPHONY_SATELLITE_CORE_SERVICE_SRC_PATH/satellite_core_callback.cpp",
    "$TELEPHONY_SATELLITE_CORE_SERVICE_SRC_PATH/satellite_core_callback_stub.cpp",
    "$TELEPHONY_SATELLITE_CORE_SERVICE_SRC_PATH/satellite_service_client.cpp",
    "$TELEPHONY_SATELLITE_CORE_SERVICE_SRC_PATH/satellite_service_proxy.cpp",
  ]
}

mock_src = [
  "$CORE_SERVICE_ROOT/test/guard/global_guard.cpp",
]

core_service_base_src = mock_src + common_src + vcard_src + tel_core_service_src

core_service_incluedirs = [
  "$CORE_SERVICE_ROOT/test/guard",
  "$CORE_SERVICE_ROOT/test/mock",
  "$CORE_SERVICE_ROOT/test/mock/codec/include",
  "$CORE_SERVICE_ROOT/test/mock/telephony_ext_wrapper",
  "$TELEPHONY_SIM_ROOT/include",
  "$TELEPHONY_TEL_RIL_ROOT/include",
  "$TELEPHONY_NETWORK_SEARCH_ROOT/include",
  "$TELEPHONY_EXT_WRAPPER_ROOT/include",
  "$CORE_SERVICE_ROOT/services/core/include",
  "$CORE_SERVICE_ROOT/services/satellite_service_interaction/include",
  "$CORE_SERVICE_ROOT/interfaces/innerkits/include/",
  "$TELEPHONY_UTILS/log/include",
  "$TELEPHONY_UTILS/vcard/include",
  "$TELEPHONY_UTILS/vcard/include/contact_data",
  "$TELEPHONY_UTILS/common/include",
  "$TELEPHONY_UTILS/preferences/include",
  "$TELEPHONY_UTILS/log/include",
]

core_service_defines = telephony_extra_defines + [
  "TELEPHONY_LOG_TAG = \"CoreServiceTest\"",
  "LOG_DOMAIN = 0xD001F04",
  "OPENSSL_SUPPRESS_DEPRECATED",
]

if (is_standard_system) {
  core_service_defines += [ "STANDARD_SYSTEM_ENABLE" ]
}

core_service_external_deps = [
  "ability_base:want",
  "ability_base:zuri",
  "ability_runtime:ability_deps_wrapper",
  "ability_runtime:ability_manager",
  "ability_runtime:app_manager",
  "ability_runtime:data_ability_helper",
  "ability_runtime:dataobs_manager",
  "ability_runtime:wantagent_innerkits",
  "access_token:libaccesstoken_sdk",
  "access_token:libprivacy_sdk",
  "access_token:libtokenid_sdk",
  "bundle_framework:appexecfwk_base",
  "bundle_framework:appexecfwk_core",
  "cJSON:cjson",
  "c_utils:utils",
  "config_policy:configpolicy_util",
  "data_share:datashare_common",
  "data_share:datashare_consumer",
  "drivers_interface_ril:libril_proxy_1.1",
  "drivers_interface_ril:libril_proxy_1.2",
  "drivers_interface_ril:libril_proxy_1.3",
  "drivers_interface_ril:libril_proxy_1.4",
  "drivers_interface_ril:libril_proxy_1.5",
  "eventhandler:libeventhandler",
  "hdf_core:libhdi",
  "hdf_core:libpub_utils",
  "hilog:libhilog",
  "hisysevent:libhisysevent",
  "huks:libhukssdk",
  "i18n:intl_util",
  "i18n:zone_util",
  "init:libbegetutil",
  "ipc:ipc_single",
  "libphonenumber:phonenumber_standard",
  "libpng:libpng",
  "libxml2:libxml2",
  "napi:ace_napi",
  "netmanager_base:net_conn_manager_if",
  "netmanager_ext:net_tether_manager_if",
  "openssl:libcrypto_shared",
  "preferences:native_preferences",
  "safwk:system_ability_fwk",
  "samgr:samgr_proxy",
  "telephony_data:tel_telephony_data",
  "time_service:time_client",
  "googletest:gmock_main",
  "googletest:gtest_main"
]

if (defined(global_parts_info) &&
    defined(global_parts_info.communication_netmanager_ext) &&
    global_parts_info.communication_netmanager_ext) {
  core_service_external_deps += [ "netmanager_ext:net_tether_manager_if" ]
  core_service_defines += [ "ABILITY_NETMANAGER_EXT_SUPPORT" ]
}

if (defined(global_parts_info) &&
    defined(global_parts_info.powermgr_power_manager) &&
    global_parts_info.powermgr_power_manager) {
  core_service_external_deps += [ "power_manager:powermgr_client" ]
  core_service_defines += [ "ABILITY_POWER_SUPPORT" ]
}

if (defined(global_parts_info) &&
    defined(global_parts_info.powermgr_battery_manager) &&
    global_parts_info.powermgr_battery_manager) {
  core_service_external_deps += [ "battery_manager:batterysrv_client" ]
  core_service_defines += [ "ABILITY_BATTERY_SUPPORT" ]
}

if (defined(global_parts_info) &&
    defined(global_parts_info.location_location) &&
    global_parts_info.location_location) {
  core_service_external_deps += [
    "location:lbsservice_common",
    "location:locator_sdk",
  ]
  core_service_defines += [ "ABILITY_LOCATION_SUPPORT" ]
}

if (telephony_hicollie_able) {
  core_service_external_deps += [ "hicollie:libhicollie" ]
  core_service_defines += [ "HICOLLIE_ENABLE" ]
}
