# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
SUBSYSTEM_DIR = "//base/telephony"

config("tel_core_service_api_private_config") {
  include_dirs = [
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/core",
    "$SUBSYSTEM_DIR/core_service/frameworks/native/include",
  ]
}

config("tel_core_service_api_public_config") {
  include_dirs = [ "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/core" ]
}

ohos_shared_library("tel_core_service_api") {
  subsystem_name = "telephony"
  part_name = "core_service"
  sources = [
    "$SUBSYSTEM_DIR/core_service/frameworks/native/src/cell_information.cpp",
    "$SUBSYSTEM_DIR/core_service/frameworks/native/src/core_service_client.cpp",
    "$SUBSYSTEM_DIR/core_service/frameworks/native/src/core_service_proxy.cpp",
    "$SUBSYSTEM_DIR/core_service/frameworks/native/src/i_network_search_callback_stub.cpp",
    "$SUBSYSTEM_DIR/core_service/frameworks/native/src/network_information.cpp",
    "$SUBSYSTEM_DIR/core_service/frameworks/native/src/network_search_result.cpp",
    "$SUBSYSTEM_DIR/core_service/frameworks/native/src/network_state.cpp",
    "$SUBSYSTEM_DIR/core_service/frameworks/native/src/radio_network_manager.cpp",
    "$SUBSYSTEM_DIR/core_service/frameworks/native/src/signal_information.cpp",
    "$SUBSYSTEM_DIR/core_service/frameworks/native/src/sim_card_manager.cpp",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/network_search/network_search_service_proxy_holder.cpp",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/sim/sim_card_interface.cpp",
  ]

  include_dirs = [
    "$SUBSYSTEM_DIR/core_service/utils/log/include",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/common",
    "$SUBSYSTEM_DIR/core_service/frameworks/js/napi",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/sim",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/network_search",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/core",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/sim",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/network_search",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/core",
    "$SUBSYSTEM_DIR/core_service/interfaces/kits/native",
    "$SUBSYSTEM_DIR/core_service/frameworks/native/include",
    "$SUBSYSTEM_DIR/core_service/frameworks/js/sim/include",
    "$SUBSYSTEM_DIR/ril_adapter/interfaces/innerkits/include",
  ]

  configs = [ ":tel_core_service_api_private_config" ]

  public_configs = [ ":tel_core_service_api_public_config" ]

  deps = [ "//utils/native/base:utils" ]
  external_deps = [
    "appexecfwk_standard:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
}
